Reorganize template content

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,36 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>ArticGrid</title>
-    <style>
-        html {
-            font-family: sans-serif;
-        }
+{% extends "base.html" %}
+{% block pagetitle %}ARASAAC Search {% endblock %}
 
-        th, td {
-            border: 1px solid black;
-        }
-
-        #results {
-            width: 100%;
-        }
-
-        #results td {
-            text-align: center;
-        }
-    </style>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-            crossorigin="anonymous"></script>
-</head>
-<body>
-<h1>ArticGrid</h1>
-<form action="/image-search" method="get">
-    <input id="query" type="text">
-    <button type="submit">Search</button>
+{% block content %}
+<form action="/image-search" method="get" class="form-inline">
+    <div class="form-group">
+        <label for="query">Query:</label>
+        <input id="query" type="text" class="form-control">
+    </div>
+    <button class="btn" type="submit">Search</button>
 </form>
 <br>
-<table id="results">
+<table id="results" class="table table-bordered">
     <thead>
     <tr>
         <th>Term</th>
@@ -39,59 +19,9 @@
     </thead>
     <tbody></tbody>
 </table>
-</body>
-<script>
-    $(document).ready(function () {
-        var results = $("#results");
-        var submit = $("button[type=submit]");
-        var images_th = results.find('th').last();
-        $("form").on("submit", function (e) {
-            var f = $(this);
-            e.preventDefault();
-            submit.text("Working...").prop("disabled", true);
-            var query = $("#query").val();
-            $.get(f.attr("action") + "/" + query, function (data) {
-                tbody = results.children("tbody").empty();
-                $.each(data, function (term, images) {
-                    var tr = $("<tr>").appendTo(tbody);
-                    tr.append($("<td>").text(term));
-                    $.each(images, function (i, image) {
-                        tr.append($("<td>")
-                            .append($("<img>")
-                                .attr("width", 100)
-                                .attr("height", 100)
-                                .attr("src", image)));
-                    });
-                    images_th.prop("colspan",
-                        Math.max(images_th.prop("colspan"), images.length));
+{% endblock %}
 
-                });
-
-                // update colspans of rows now that max number of cells is known
-                var max_images = images_th.prop("colspan");
-                tbody.children().each(function () {
-                    var row = $(this);
-                    var num_images = row.children().length - 1;
-                    if (num_images === 1) {
-                        row.children().last().attr("colspan", max_images);
-                    } else {
-                        row.children(":not(:first)").each(function (c) {
-                            var cell = $(this);
-                            var auto_colspan = Math.floor(max_images /
-                                num_images);
-                            if (c === num_images - 1) {
-                                cell.attr("colspan",
-                                    max_images - (auto_colspan * (num_images
-                                    - 1)));
-                            } else {
-                                cell.attr("colspan", auto_colspan);
-                            }
-                        });
-                    }
-                });
-                submit.text("Search").prop("disabled", false);
-            });
-        });
-    });
-</script>
-</html>
+{% block footer %}
+{{ super() }}
+<script src="static/index.js"></script>
+{% endblock %}}
