Use 'b' for target 2 default
... so that the default isn't /p/ & /p/

--- a/templates/minimal-pairs.html
+++ b/templates/minimal-pairs.html
@@ -40,7 +40,7 @@
   <label class="control-label">Target 2:</label>
   <select class="form-control" id="target2" name="target2">
     <option value="P">p</option>
-    <option value="B">b</option>
+    <option selected="selected" value="B">b</option>
     <option value="T">t</option>
     <option value="D">d</option>
     <option value="K">k</option>
