--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">ArticGrid</a>
+        <a class="navbar-brand" href="/">ArticGrid</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
