--- a/templates/images.html
+++ b/templates/images.html
@@ -2,6 +2,7 @@
 {% set active_page = "Images" %}
 
 {% block content %}
+<p class="lead">Find pictograms based on a search term</p>
 <form action="/image-search" method="get" class="form-inline">
     <div class="form-group">
         <label for="query">Query:</label>
