Fix indents for templates

--- a/templates/minimal-pairs.html
+++ b/templates/minimal-pairs.html
@@ -225,7 +225,10 @@
 -->
 
 <table id="results" class="table">
-  <thead><th>Word 1</th><th>Word 2</th></thead>
+  <thead>
+  <th>Word 1</th>
+  <th>Word 2</th>
+  </thead>
   <tbody></tbody>
 </table>
 {% endblock %}
