Replace old name ArticGrid with ArticTools
To match the new domain name as well. Fixes #3.

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,8 +2,8 @@
 {% set active_page = "About" %}
 
 {% block content %}
-<p class="lead">ArticGrid is <strong>free to use</strong>, and its source code is publicly available at <a
-    href="https://github.com/iansjk/articgrid" target="_blank">GitHub</a>.</p>
+<p class="lead">{{ project_name }} is <strong>free to use</strong>, and its source code is publicly available at <a
+    href="https://github.com/iansjk/artictools" target="_blank">GitHub</a>.</p>
 
 <p>Image search functionality is provided by the <a href="http://www.arasaac.org" target="_blank">Aragonese Portal of
   Augmentative and Alternative Communication (ARASAAC)</a>. The pictograms used are property of Aragon Goberment and
