--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block pagetitle %}ArticGrid{% endblock %}
+{% block pagetitle %}{{ project_name }}{% endblock %}
 
 {% block content %}
 Nothing to see here yet...
