Fix page heading for pictograms

--- a/templates/pictograms.html
+++ b/templates/pictograms.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% set active_page = "Images" %}
+{% set active_page = "Pictograms" %}
 
 {% block content %}
 <p class="lead">Find pictograms based on a search term</p>
