--- a/templates/pictograms.html
+++ b/templates/pictograms.html
@@ -24,5 +24,5 @@
 
 {% block footer %}
 {{ super() }}
-<script src="/static/pictograms.js"></script>
+<script src="{{ url_for('static', filename='pictograms.js') }}"></script>
 {% endblock %}}
