--- a/templates/about.html
+++ b/templates/about.html
@@ -2,18 +2,19 @@
 {% set active_page = "About" %}
 
 {% block content %}
-<p class="lead">{{ project_name }} is <strong>free to use</strong>, and its source code is publicly available at <a
-    href="https://github.com/iansjk/artictools" target="_blank">GitHub</a>.</p>
+  <p class="lead">{{ project_name }} is <strong>free to use</strong>, and its source code is publicly available at <a
+      href="https://github.com/iansjk/artictools" target="_blank">GitHub</a>.</p>
 
-<p>Image search functionality is provided by the <a href="http://www.arasaac.org" target="_blank">Aragonese Portal of
-  Augmentative and Alternative Communication (ARASAAC)</a>. The pictograms used are property of Aragon Goberment and
-  have been created by Sergio Palao for ARASAAC which distributes them under the <a
-      href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode" target="_blank">Creative Commons License
-    (BY-NC-SA)</a>.</p>
+  <p>Image search functionality is provided by the <a href="http://www.arasaac.org" target="_blank">Aragonese Portal of
+    Augmentative and Alternative Communication (ARASAAC)</a>. The pictograms used are property of Aragon Goberment and
+    have been created by Sergio Palao for ARASAAC which distributes them under the <a
+        href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode" target="_blank">Creative Commons License
+      (BY-NC-SA)</a>.</p>
 
-<p>The source code is licensed under the <a
-    href="https://www.gnu.org/licenses/gpl-3.0-standalone.html" target="_blank">GNU Public License version 3</a>.
-  (Creative Commons considers the GPLv3 <a
-      href="https://creativecommons.org/share-your-work/licensing-considerations/compatible-licenses/" target="_blank">
-    compatible</a> with the Creative Commons BY-NC-SA license.)</p>
+  <p>The source code is licensed under the <a
+      href="https://www.gnu.org/licenses/gpl-3.0-standalone.html" target="_blank">GNU Public License version 3</a>.
+    (Creative Commons considers the GPLv3 <a
+        href="https://creativecommons.org/share-your-work/licensing-considerations/compatible-licenses/"
+        target="_blank">
+      compatible</a> with the Creative Commons BY-NC-SA license.)</p>
 {% endblock %}
