--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,12 @@
 {% block pagetitle %}{{ project_name }}{% endblock %}
 
 {% block content %}
-  Nothing to see here yet...
+  <p class="lead">Welcome!</p>
+
+  <p><strong>ArticTools</strong> is a collection of free tools for use in speech therapy for articulation. You can use
+    the links above to find lists of words for sounds you want to target. You can also find <a
+        href="{{ url_for('pictograms') }}">pictograms</a> for words to create worksheets for home practice or to use in
+    therapy without verbal modeling.</p>
+
+  <p>A grid building tool is coming soon that will automate creation of those worksheets. Stay tuned!</p>
 {% endblock %}
