Make table classes consistent

--- a/templates/pictograms.html
+++ b/templates/pictograms.html
@@ -11,7 +11,7 @@
     <button class="btn" type="submit">Search</button>
   </form>
   <br>
-  <table id="results" class="table table-bordered">
+  <table id="results" class="table">
     <thead>
     <tr>
       <th>Term</th>
