Use DataTables for table rendering/data fetching

--- a/templates/pictograms.html
+++ b/templates/pictograms.html
@@ -11,11 +11,11 @@
     <button class="btn" type="submit">Search</button>
   </form>
   <br>
-  <table id="results" class="table">
+  <table id="results" class="table" data-defer-init="true">
     <thead>
     <tr>
       <th>Term</th>
-      <th>Image(s)</th>
+      <th data-orderable="false">Image(s)</th>
     </tr>
     </thead>
     <tbody></tbody>
