--- a/templates/minimal-pairs.html
+++ b/templates/minimal-pairs.html
@@ -2,7 +2,7 @@
 {% set active_page = "Minimal Pairs" %}
 
 {% block content %}
-  <p class="lead">Automatically find minimal pairs based on chosen targets</p>
+  <p class="lead">Find minimal pairs based on chosen target sounds</p>
 
   <form class="form-inline" action="{{ url_for('minimal_pair_search') }}" method="get">
     <label class="control-label" for="target1">Target 1:</label>
