--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,23 @@
-html {
-    font-family: sans-serif;
+header {
+    padding-bottom: 3.5rem;
 }
 
-nav {
-    position: fixed;
-    right: 0;
-    left: 0;
-    z-index: 1030;
+h1#page-title {
+    margin-top: 1rem;
 }
 
-body {
-    padding-top: 50px;
+.navbar-brand sup {
+    color: rgba(255, 255, 255, .5);
+}
+
+button, input, optgroup, select, textarea {
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+
+.btn:hover {
+    cursor: pointer;
+}
+
+ul.pagination > li.disabled {
+    cursor: not-allowed;
 }
