--- a/templates/pictograms.html
+++ b/templates/pictograms.html
@@ -1,16 +1,14 @@
-{% extends "base.html" %}
+{% extends "page.html" %}
 {% set active_page = "Pictograms" %}
 
 {% block content %}
   <p class="lead">Find pictograms based on a search term</p>
   <form action="{{ url_for('pictogram_search') }}" method="get" class="form-inline">
-    <div class="form-group">
-      <label for="query">Query:</label>
-      <input id="query" name="query" class="form-control">
-    </div>
-    <button class="btn" type="submit">Search</button>
+    <label class="form-control-label" for="query">Query:</label>
+    <input id="query" name="query" class="form-control mx-2">
+    <button class="btn btn-primary" type="submit">Search</button>
   </form>
-  <br>
+  <hr>
   <table id="results" class="table" data-defer-init="true">
     <thead>
     <tr>
