--- a/templates/grid-builder.html
+++ b/templates/grid-builder.html
@@ -4,68 +4,7 @@
 {% block head %}
   {{ super() }}
   <link rel="stylesheet" href="{{ url_for('static', filename='vendor/fontawesome/css/font-awesome.min.css') }}">
-  <style>
-    #prototype {
-      display: none;
-    }
-
-    #grid h2 {
-      margin-bottom: 1.5rem;
-      text-align: center;
-    }
-
-    .cell-title:hover, #grid-title:hover {
-      cursor: pointer;
-      background: yellow;
-    }
-
-    .cell-title:focus, #grid-title:focus {
-      background: none;
-    }
-
-    .row {
-      margin: 0;
-      border-top: 1px solid rgba(0, 0, 0, .5);
-      flex-wrap: nowrap;
-    }
-
-    .row + .row {
-      border: 0;
-    }
-
-    .col {
-      text-align: center;
-      border-style: solid;
-      border-color: rgba(0, 0, 0, .5);
-      border-width: 0 1px 1px 1px;
-      padding: 0;
-    }
-
-    .col + .col {
-      border-left: 0;
-    }
-
-    .col h4 {
-      padding: 0;
-      margin: 0.5rem 0 0.75rem;
-      font-size: 1.5vw;
-      white-space: nowrap;
-    }
-
-    @media print {
-      h1, .lead {
-        display: none;
-      }
-
-      .col h4 {
-        font-size: 1rem;
-      }
-
-      h4::first-letter {
-        margin-top: 0;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="{{ url_for('static', filename='grid-builder.css') }}">
 {% endblock %}
 
 {% block content %}
@@ -103,45 +42,5 @@
 {% block footer %}
   {{ super() }}
   <script src="{{ url_for('static', filename='vendor/holder.min.js') }}"></script>
-  <script>
-      "use strict";
-
-      $(document).ready(function () {
-          var $prototype = $("#prototype").children();
-          var $gridsize = $("#grid-size");
-          var $gridcells = $("#grid-cells");
-          $gridsize.change(function () {
-              $gridcells.empty();
-              for (var i = 0; i < $gridsize.val(); i++) {
-                  var $row = $('<div class="row">');
-                  for (var j = 0; j < $gridsize.val(); j++) {
-                      $prototype.clone().appendTo($row);
-                  }
-                  $row.appendTo($gridcells);
-              }
-          }).trigger("change");
-
-          $("#print").click(function (e) {
-              e.preventDefault();
-              window.print();
-          });
-
-          // disallow newline (enter key) in grid title
-          $("#grid-title").keypress(function(e) {
-              return e.which !== 13;
-          });
-
-          $("h2, h4").focusin(function() {
-              var $this = $(this);
-              if ($this.text().trim() === $this.attr("data-placeholder")) {
-                  $this.text("");
-              }
-          }).focusout(function() {
-              var $this = $(this);
-              if ($this.text().trim() === "") {
-                  $this.text($this.attr("data-placeholder"));
-              }
-          });
-      });
-  </script>
+  <script src="{{ url_for('static', filename='grid-builder.js') }}"></script>
 {% endblock %}
