--- a/templates/grid-builder.html
+++ b/templates/grid-builder.html
@@ -23,9 +23,41 @@
   <div id="prototype">
     <div class="col empty-cell">
       <img class="img-fluid cell-image" data-src="holder.js/400x400?auto=yes&font=FontAwesome&text=&#xf03e;&size=100"
-           src="">
+           src="" data-toggle="modal" data-target="#image-picker">
       <h4 class="cell-title text-muted" contenteditable="true" data-placeholder="(Click to edit)">
         (Click to edit)</h4>
+    </div>
+  </div>
+
+  <div class="modal" id="image-picker" tabindex="-1" role="dialog" aria-labelledby="image-picker-title"
+       aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="image-picker-title">Select an image</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form action="{{ url_for('pictogram_search') }}" method="get" class="form">
+            <label for="image-search-query" class="sr-only">Query:</label>
+            <input id="image-search-query" class="form-control">
+          </form>
+          <br>
+          <div id="image-results">
+            <div class="row">
+              <div class="col"><img class="img-fluid" src="http://www.arasaac.org/repositorio/originales/7793.png" data-src="holder.js/100x100"></div>
+              <div class="col"><img class="img-fluid" src="http://www.arasaac.org/repositorio/originales/7793.png" data-src="holder.js/100x100"></div>
+              <div class="col"><img class="img-fluid" src="http://www.arasaac.org/repositorio/originales/7793.png" data-src="holder.js/100x100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>
+      </div>
     </div>
   </div>
 
