--- a/templates/grid-builder.html
+++ b/templates/grid-builder.html
@@ -42,20 +42,14 @@
         <div class="modal-body">
           <form action="{{ url_for('pictogram_search') }}" method="get" class="form">
             <label for="image-search-query" class="sr-only">Query:</label>
-            <input id="image-search-query" class="form-control">
+            <input id="image-search-query" name="query" class="form-control">
           </form>
-          <br>
-          <div id="image-results">
-            <div class="row">
-              <div class="col"><img class="img-fluid" src="http://www.arasaac.org/repositorio/originales/7793.png" data-src="holder.js/100x100"></div>
-              <div class="col"><img class="img-fluid" src="http://www.arasaac.org/repositorio/originales/7793.png" data-src="holder.js/100x100"></div>
-              <div class="col"><img class="img-fluid" src="http://www.arasaac.org/repositorio/originales/7793.png" data-src="holder.js/100x100"></div>
-            </div>
-          </div>
+          <div class="placeholder text-center text-muted"><i class="fa fa-spin fa-spinner fa-5x"></i></div>
+          <div id="image-results" class="row"></div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary">Save</button>
+          <button id="save" type="button" class="btn btn-primary">Save</button>
         </div>
       </div>
     </div>
@@ -73,5 +67,6 @@
 {% block footer %}
   {{ super() }}
   <script src="{{ url_for('static', filename='vendor/holder.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='vendor/jquery.imgcheckbox.js') }}"></script>
   <script src="{{ url_for('static', filename='grid-builder.js') }}"></script>
 {% endblock %}
