Don't print empty items

--- a/templates/grid-builder.html
+++ b/templates/grid-builder.html
@@ -21,10 +21,11 @@
   <hr class="hidden-print">
 
   <div id="prototype">
-    <div class="col empty-cell">
-      <img class="img-fluid cell-image" data-src="holder.js/400x400?auto=yes&font=FontAwesome&text=&#xf03e;&size=100"
+    <div class="col">
+      <img class="img-fluid cell-image hidden-print"
+           data-src="holder.js/400x400?auto=yes&font=FontAwesome&text=&#xf03e;&size=100"
            src="" data-toggle="modal" data-target="#image-picker">
-      <h4 class="cell-title text-muted" contenteditable="true" data-placeholder="(Click to edit)">
+      <h4 class="cell-title text-muted hidden-print" contenteditable="true" data-placeholder="(Click to edit)">
         (Click to edit)</h4>
     </div>
   </div>
@@ -56,7 +57,7 @@
   </div>
 
   <section id="grid">
-    <h2 id="grid-title" class="text-muted" contenteditable="true" data-placeholder="(Click to add title)">
+    <h2 id="grid-title" class="text-muted hidden-print" contenteditable="true" data-placeholder="(Click to add title)">
       (Click to add title)</h2>
     <div id="grid-cells"></div>
   </section>
