Iconify site index headings

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,14 +13,14 @@
   <div class="container">
     <div class="row">
       <section class="col-md-4">
-        <h2>Find Pictograms</h2>
+        <h2><i class="fa fa-file-image-o" aria-hidden="true"></i> Find Pictograms</h2>
 
         <p>Search for <a href="{{ url_for("pictogram_search") }}">color pictograms</a> using keywords. This lets you
           avoid using verbal modeling and focus on spontaneous production.</p>
       </section>
 
       <section class="col-md-4">
-        <h2>Generate Wordlists</h2>
+        <h2><i class="fa fa-list" aria-hidden="true"></i> Generate Wordlists</h2>
 
         <p>Generate target word lists using different phonological approaches by using <a
             href="{{ url_for("minimal_pairs") }}">minimal pairs</a> or a <a href="{{ url_for("maximal_contrast") }}">maximal
@@ -28,7 +28,7 @@
       </section>
 
       <section class="col-md-4">
-        <h2>Create Worksheets</h2>
+        <h2><i class="fa fa-table" aria-hidden="true"></i> Create Worksheets</h2>
 
         <p>Combine pictograms with target words to <a href="{{ url_for("grid_builder") }}">create worksheets</a> for
           therapy sessions or home practice.</p>
