Remove references to maximal contrast
Not ready yet!

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,8 @@
       <section class="col-md-4">
         <h2><i class="fa fa-list" aria-hidden="true"></i> Generate Wordlists</h2>
 
-        <p>Generate target word lists using different phonological approaches by using <a
-            href="{{ url_for("minimal_pairs") }}">minimal pairs</a> or a <a href="{{ url_for("maximal_contrast") }}">maximal
-          contrast approach</a>.</p>
+        <p>Generate target word lists based on <a href="{{ url_for("minimal_pairs") }}">minimal pairs</a> for your
+          target sounds.</p>
       </section>
 
       <section class="col-md-4">
