--- a/templates/grid-builder.html
+++ b/templates/grid-builder.html
@@ -24,7 +24,7 @@
     <div class="col">
       <img class="img-fluid cell-image hidden-print"
            data-src="holder.js/400x400?auto=yes&font=FontAwesome&text=&#xf03e;&size=100"
-           src="" data-toggle="modal" data-target="#image-picker">
+           data-toggle="modal" data-target="#image-picker">
       <h4 class="cell-title text-muted hidden-print" contenteditable="true" data-placeholder="(Click to edit)">
         (Click to edit)</h4>
     </div>
