Allow grid images to be reset

--- a/templates/grid-builder.html
+++ b/templates/grid-builder.html
@@ -49,6 +49,7 @@
           <div id="image-results" class="row"></div>
         </div>
         <div class="modal-footer">
+          <button id="reset-image" type="button" class="btn btn-secondary">Reset</button>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
           <button id="save" type="button" class="btn btn-primary">Save</button>
         </div>
