Fix broken link
Wrong endpoint.

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
       <section class="col-md-4">
         <h2><i class="fa fa-file-image-o" aria-hidden="true"></i> Find Pictograms</h2>
 
-        <p>Search for <a href="{{ url_for("pictogram_search") }}">color pictograms</a> using keywords. This lets you
+        <p>Search for <a href="{{ url_for("pictograms") }}">color pictograms</a> using keywords. This lets you
           avoid using verbal modeling and focus on spontaneous production.</p>
       </section>
 
