--- a/static/grid-builder.css
+++ b/static/grid-builder.css
@@ -41,8 +41,8 @@
 
 .cell-title {
     margin: 0;
-    padding: 0.5rem 0 0.75rem;
-    font-size: 1.5vw;
+    padding: 0.5em 0; /* em, not rem! */
+    font-size: 16px;
     white-space: nowrap;
 }
 
@@ -74,5 +74,29 @@
 
     .cell-title::first-letter {
         margin-top: 0;
+    }
+}
+
+@media (min-width: 544px) {
+    .cell-title {
+        font-size: 3vw;
+    }
+}
+
+@media (min-width: 768px) {
+    .cell-title {
+        font-size: 2.5vw;
+    }
+}
+
+@media (min-width: 992px) {
+    .cell-title {
+        font-size: 2vw;
+    }
+}
+
+@media (min-width: 1200px) {
+    .cell-title {
+        font-size: 1.5vw;
     }
 }
