--- a/templates/grid-builder.html
+++ b/templates/grid-builder.html
@@ -21,11 +21,11 @@
   <hr class="hidden-print">
 
   <div id="prototype">
-    <div class="col">
-      <img class="img-fluid cell-image hidden-print"
+    <div class="col cell">
+      <img class="img-fluid cell-image"
            data-src="holder.js/400x400?auto=yes&font=FontAwesome&text=&#xf03e;&size=100"
            data-toggle="modal" data-target="#image-picker">
-      <h4 class="cell-title text-muted hidden-print" contenteditable="true" data-placeholder="(Click to edit)">
+      <h4 class="cell-title" contenteditable="true" data-placeholder="(Click to edit)">
         (Click to edit)</h4>
     </div>
   </div>
@@ -60,7 +60,7 @@
   <section id="grid">
     <h2 id="grid-title" class="text-muted hidden-print" contenteditable="true" data-placeholder="(Click to add title)">
       (Click to add title)</h2>
-    <div id="grid-cells"></div>
+    <div id="cell-container"></div>
   </section>
 
   <br>
