Refactor js into functions

--- a/templates/grid-builder.html
+++ b/templates/grid-builder.html
@@ -58,7 +58,7 @@
   </div>
 
   <section id="grid">
-    <h2 id="grid-title" class="text-muted hidden-print" contenteditable="true" data-placeholder="(Click to add title)">
+    <h2 id="grid-title" contenteditable="true" data-placeholder="(Click to add title)">
       (Click to add title)</h2>
     <div id="cell-container"></div>
   </section>
