--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,7 @@
     <script src="{{ url_for('static', filename='vendor/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='vendor/jquery.dataTables.min.js') }}"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap4.min.js"></script>
+    <script src="{{ url_for('static', filename='vendor/dataTables.select.min.js') }}"></script>
     <script src="{{ url_for('static', filename='vendor/tether.min.js') }}"></script>
     <script src="{{ url_for('static', filename='vendor/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='common.js') }}"></script>
