--- a/static/style.css
+++ b/static/style.css
@@ -14,7 +14,7 @@ button, input, optgroup, select, textarea {
     font-family: inherit;
 }
 
-.btn:hover {
+.btn:not(.disabled):hover {
     cursor: pointer;
 }
 
