Use app.MINIMUM_PICTOGRAM_QUERY_LENGTH

--- a/templates/grid-builder.html
+++ b/templates/grid-builder.html
@@ -17,6 +17,7 @@
       <option value="5">5 x 5</option>
     </select>
     <button id="print" class="btn btn-primary mr-2"><i class="fa fa-print" aria-hidden="true"></i> Print</button>
+    <input type="hidden" id="minimum-query-length" value="{{ config["MINIMUM_PICTOGRAM_QUERY_LENGTH"] }}">
   </form>
   <hr class="hidden-print">
 
