Use infinite scroll loading on image picker

--- a/templates/grid-builder.html
+++ b/templates/grid-builder.html
@@ -70,6 +70,6 @@
 {% block footer %}
   {{ super() }}
   <script src="{{ url_for('static', filename='vendor/holder.min.js') }}"></script>
-  <script src="{{ url_for('static', filename='vendor/jquery.imgcheckbox.js') }}"></script>
+  <script src="{{ url_for('static', filename='vendor/jquery.lazyload.js') }}"></script>
   <script src="{{ url_for('static', filename='grid-builder.js') }}"></script>
 {% endblock %}
