--- a/static/style.css
+++ b/static/style.css
@@ -14,7 +14,11 @@ button, input, optgroup, select, textarea {
     font-family: inherit;
 }
 
-.btn:not(.disabled):hover {
+.btn:disabled:hover {
+    cursor: not-allowed;
+}
+
+.btn:hover {
     cursor: pointer;
 }
 
