--- a/templates/pictograms.html
+++ b/templates/pictograms.html
@@ -5,7 +5,7 @@
   <p class="lead">Find pictograms based on a search term</p>
   <form action="{{ url_for('pictogram_search') }}" method="get" class="form-inline">
     <label class="form-control-label" for="query">Query:</label>
-    <input id="query" name="query" class="form-control mx-2" placeholder="Enter search query...">
+    <input id="query" name="query" class="form-control mx-2" placeholder="Enter search query..." autofocus>
     <button class="btn btn-primary" type="submit" disabled>Search</button>
     <input type="hidden" id="minimum-query-length" value="{{ config["MINIMUM_PICTOGRAM_QUERY_LENGTH"] }}">
   </form>
